# cardcraft

./: .gitignore  Gemfile  Makefile  PLAN.md  README.md  pre-commit  pyproject.toml
bases/cardcraft/app/: .gitignore  core.py  mem.py  package-lock.json  package.json  rollup.config.js  theme.py  tsconfig.json
bases/cardcraft/app/controllers/: authn.py  cards.py  decks.py  matches.py
bases/cardcraft/app/services/: db.py  engine.py  game.py  loop.py  match.py  mem.py  nemesis.py  pot.py
bases/cardcraft/app/src/: index.ts  thing.ts
bases/cardcraft/app/tests/services/: test_engine.py
bases/cardcraft/app/views/: base.py  cards.py  decks.py  matches.py  navigation.py  theme.py
bases/cardcraft/apparatus/: manage.py
bases/cardcraft/apparatus/apparatus/: asgi.py  settings.py  urls.py  wsgi.py
components/cardcraft/game/: engine.py  engine_spec.py  loop.py  nemesis.py  system.py  system_spec.py
components/cardcraft/util/: metrics.py  patterns.py
config/: deploy.rb
config/deploy/: prod.rb
projects/cardcraft-installer/: main.py  pyproject.toml
projects/cardcraft-web/: Makefile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh  test.py
projects/cardcraft-web/cardcraft/: app  apparatus  game  poke
projects/sol/: Anchor.toml  README.md
projects/sol/programs/cardgames/: Cargo.toml
projects/sol/programs/cardgames/src/: lib.rs
projects/sol/programs_py/: cardgames.py
projects/sol/tests/: cardgames.ts
