[tool.poetry]
name = "cardcraft-installer"
version = "0.1.0"
description = ""
authors = ["Luka L <licina.luka@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fabric = "3.2.2"
pyrsistent = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
